--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="https://i.hizliresim.com/3w6vtd1.png" type="image/png" />
 </head>
+<div class="lds-dual-ring"></div>
 <body class="dark">
     <div class="container">
         <h1>Hey <span class="wave">👋</span> I'm Oxide, <br> a <span class="developer">developer</span></h1>
